--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,58 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@drawable/gradient">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+   <ImageView
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:id="@+id/login"
+       android:layout_marginTop="100dp"
+       android:layout_marginBottom="400dp"
+       android:layout_marginLeft="50dp"
+       android:layout_marginRight="50dp"
+       android:src="@drawable/image"
+       />
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:orientation="vertical"
+       android:layout_marginTop="400dp"
+      >
+      <EditText
+          android:layout_width="250dp"
+          android:layout_height="wrap_content"
+          android:layout_gravity="center"
+          android:hint="Cedula"
+          android:inputType="number"
+         />
+      <EditText
+          android:layout_width="250dp"
+          android:layout_height="wrap_content"
+         android:layout_marginTop="10dp"
+          android:layout_gravity="center"
+         android:hint="Contraseña"
+         android:inputType="textPassword"/>
+
+      <ImageView
+          android:layout_width="194px"
+          android:layout_height="179px"
+          android:layout_gravity="center"
+          android:layout_marginTop="25dp"
+          android:background="#A185F6EB"
+          android:contentDescription="Login"
+          android:src="@drawable/login" />
+
+      <TextView
+          android:layout_width="200dp"
+          android:layout_height="50dp"
+          android:layout_marginTop="45dp"
+          android:layout_marginRight="200dp"
+          android:layout_marginLeft="25dp"
+          android:text="Registrarse"
+          android:textColor="#ABE1DC"
+          android:textSize="20sp" />
+   </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
