--- a/app/src/main/res/layout/matricular_row.xml
+++ b/app/src/main/res/layout/matricular_row.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<CheckedTextView
-    android:id="@+id/txt_lan"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center"
-    android:checkMark="?android:attr/listChoiceIndicatorMultiple"
-    android:padding="5dp">
+    <CheckedTextView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/txt_lan"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
+        android:padding="5dp">
 
-</CheckedTextView>
+    </CheckedTextView>
+
+
+
