--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,36 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:background="@drawable/gradient">
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    >
    <ImageView
        android:layout_width="match_parent"
-       android:layout_height="match_parent"
+       android:layout_height="wrap_content"
        android:id="@+id/login"
-       android:layout_marginTop="100dp"
-       android:layout_marginBottom="400dp"
-       android:layout_marginLeft="50dp"
-       android:layout_marginRight="50dp"
        android:src="@drawable/image"
        />
    <LinearLayout
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
        android:orientation="vertical"
-       android:layout_marginTop="400dp"
+       android:layout_marginTop="20dp"
       >
       <EditText
+          android:id="@+id/login_id"
           android:layout_width="250dp"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:hint="Cedula"
-          android:inputType="number"
          />
       <EditText
+          android:id="@+id/login_password"
           android:layout_width="250dp"
           android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
@@ -39,6 +40,7 @@
          android:inputType="textPassword"/>
 
       <ImageView
+          android:id="@+id/loginBtn"
           android:layout_width="194px"
           android:layout_height="179px"
           android:layout_gravity="center"
@@ -48,6 +50,7 @@
           android:src="@drawable/login" />
 
       <TextView
+          android:id="@+id/registar_text"
           android:layout_width="200dp"
           android:layout_height="50dp"
           android:layout_marginTop="45dp"
@@ -57,5 +60,5 @@
           android:textColor="#ABE1DC"
           android:textSize="20sp" />
    </LinearLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
+</RelativeLayout>
