--- a/app/src/main/res/layout/activity_registar.xml
+++ b/app/src/main/res/layout/activity_registar.xml
@@ -104,6 +104,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:inputType="number"
                 android:text=""
                 android:textSize="22sp"/>
 
