--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
+       android:layout_gravity="center_horizontal"
       >
       <EditText
           android:id="@+id/login_id"
@@ -44,21 +45,21 @@
           android:layout_width="194px"
           android:layout_height="179px"
           android:layout_gravity="center"
-          android:layout_marginTop="25dp"
+          android:layout_marginTop="55dp"
           android:background="#A185F6EB"
           android:contentDescription="Login"
           android:src="@drawable/login" />
 
-      <TextView
-          android:id="@+id/registar_text"
-          android:layout_width="200dp"
-          android:layout_height="50dp"
-          android:layout_marginTop="45dp"
-          android:layout_marginRight="200dp"
-          android:layout_marginLeft="25dp"
-          android:text="Registrarse"
-          android:textColor="#ABE1DC"
-          android:textSize="20sp" />
+<!--      <TextView-->
+<!--          android:id="@+id/registar_text"-->
+<!--          android:layout_width="200dp"-->
+<!--          android:layout_height="50dp"-->
+<!--          android:layout_marginTop="45dp"-->
+<!--          android:layout_marginRight="200dp"-->
+<!--          android:layout_marginLeft="25dp"-->
+<!--          android:text="Registrarse"-->
+<!--          android:textColor="#ABE1DC"-->
+<!--          android:textSize="20sp" />-->
    </LinearLayout>
 </LinearLayout>
 </RelativeLayout>
